@@ -2,7 +2,7 @@
  
 ## Configurable validator
  
-The internal validator has been re-factored, among many other changes there is now a check for missing keys and the check for re-surveying introduced in 0.9.9, is now fully configurable.
+The internal validator has been re-factored, among many other changes there is now a check for missing keys and the check for re-surveying, introduced in 0.9.9, is now fully configurable.
 
 The missing tag check works on the combination of the keys that should be checked and the preset for element.
 
@@ -17,6 +17,7 @@ Currently C-Mode is accessed by cycling through the modes via long press on the 
 ## Miscellaneous 
 
 * The icon for splitting a selected way is now a pair of scissors.
+* Improved label rendering.
 
 The full change log is available [here](https://github.com/MarcusWolschon/osmeditor4android/commits/master)
 
