@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string translatable="false" name="app_name">Vespucci</string>
-    <string translatable="false" name="app_version">0.9.10.0.1308</string>
-    <string translatable="false" name="app_name_version">Vespucci 0.9.10b1308</string>
+    <string translatable="false" name="app_version">0.9.10.0.1309</string>
+    <string translatable="false" name="app_name_version">Vespucci 0.9.10b1309</string>
 </resources>
